# SPDX-FileCopyrightText: 2025 Chiel Douwes
#
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
members = [
    "batl",
    "dbpf",
    "dbpf_utils",
    "yact",
    "yape",
]

resolver = "2"

[workspace.package]
repository = "https://github.com/chieltbest/dbpf"

[workspace.metadata.release]
publish = false
tag-prefix = "{{crate_name}}/"
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}", "--tag-pattern", "{{crate_name}}/v*"]

[workspace.dependencies]
binrw = "0.15"

futures = "0.3"

serde = "1"
serde_json = "1"

tracing = "0.1"

eframe = { version = "0.32", features = ["persistence"] }
egui_extras = "0.32"
rfd = "0.15"
egui_memory_editor = { version = "=0.2.13", features = ["serde"] }
egui_dock = { version = "0.17.0", features = ["serde"] }
egui_inbox = "0.9.0"

[profile.release]
opt-level = 3

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# The profile that CI will build with
[profile.dist]
inherits = "release"
lto = "thin"
