[package]
name = "batl"
version = "0.2.2"
edition = "2021"
build = "build.rs"
repository.workspace = true
publish = false

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md",
    "--tag", "{{version}}",
    "--tag-pattern", "{{crate_name}}/v*",
    "--include-path", "{{crate_name}}/",
    "--include-path", "dbpf/",
    "--include-path", "dbpf_utils/src/lib.rs"]

[package.metadata.packager]
product-name = "Big Awful Texture Locator"
identifier = "nl.chieldouwes.batl"
icons = ["icon.png"]

[dependencies]
binrw = "0.14"
dbpf = { path = "../dbpf" }
dbpf_utils = { path = "../dbpf_utils" }

lru = "0.13"

futures = "0.3"

eframe = { version = "0.31", features = ["persistence"] }
serde = "1.0.203"
serde_json = "1.0.120"
egui_extras = "0.31"
rfd = "0.15"
egui_dock = { version = "0.16", features = ["serde"] }

open = "5.3"
walkdir = "2"

tracing = "0.1"

tokio = { version = "1.38", features = ["full"] }
num_cpus = "1.16"

[build-dependencies]
embed-resource = "3.0"
