# SPDX-FileCopyrightText: 2025 Chiel Douwes
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "batl"
version = "0.3.0"
edition = "2021"
build = "build.rs"
repository.workspace = true
publish = false

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md",
    "--tag", "{{version}}",
    "--tag-pattern", "{{crate_name}}/v*",
    "--include-path", "{{crate_name}}/",
    "--include-path", "dbpf/"]

[package.metadata.packager]
product-name = "Big Awful Texture Locator"
identifier = "nl.chieldouwes.batl"
icons = ["icon.png"]

[features]
tracy = ["dbpf_utils/tracy"]

[dependencies]
binrw.workspace = true
dbpf = { path = "../dbpf" }
dbpf_utils = { path = "../dbpf_utils" }

lru = "0.16"

futures.workspace = true

enum-iterator = "2"

serde.workspace = true
serde_json.workspace = true

eframe.workspace = true
egui_extras.workspace = true
rfd.workspace = true
egui_dock.workspace = true

humansize = "2"

open = "5.3"
walkdir = "2"

tracing.workspace = true

tokio = { version = "1.38", features = ["full"] }
num_cpus = "1.16"

[build-dependencies]
embed-resource = "3.0"
