[package]
name = "dbpf"
version = "0.1.0"
edition = "2021"
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.14.0"
refpack = {git = "https://github.com/chieltbest/refpack-rs.git"}
modular-bitfield = "0.11.2"
thiserror = "1.0"
enum-iterator = "2.1"
derive_more = { version = "2.0", features = ["try_from", "from", "try_into"] }
texpresso = "2.0"
miniz_oxide = { version = "0.7.4", features = ["simd"] }
xmltree = "0.11"
