[package]
name = "dbpf"
version = "0.1.0"
edition = "2021"
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.14.0"
refpack = "5.0.0"
modular-bitfield = "0.11.2"
thiserror = "1.0"
enum-iterator = "2.1"
derive_more = { version = "2.0", features = ["try_from", "from", "try_into", "display", "deref", "deref_mut"] }
# temporary workaround until 2.0.2 comes out for https://github.com/jansol/texpresso/pull/9
texpresso = { git = "https://github.com/jansol/texpresso.git" }
ddsfile = "0.5"
miniz_oxide = { version = "0.7.4", features = ["simd"] }
xmltree = "0.11"
log = "0.4.27"

[dev-dependencies]
proptest = "1"
test-strategy = "0.4"
