[package]
name = "dbpf_utils"
version = "0.1.0"
edition = "2021"
repository.workspace = true
publish = false

[dependencies]
binrw = "0.14"
dbpf = { path = "../dbpf" }
humansize = "2.1"
fuzzy-matcher = "0.3"

futures = "0.3"

eframe = { version = "0.31", features = ["persistence"] }
egui_extras = { version = "0.31", features = ["datepicker", "serde"] }
rfd = "0.15"
enum-iterator = "2.1"
chrono = "0.4"

walkdir = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-panic = "0.1"

tokio = { version = "1.38", features = ["full"] }
tokio-rayon = "2.1"
num_cpus = "1.16"

thiserror = "2.0"

image = "0.25"

clap = { version = "4.5", features = ["derive", "unicode"] }

similar = { version = "2.7", features = ["bytes"] }
