# SPDX-FileCopyrightText: 2025 Chiel Douwes
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "dbpf_utils"
version = "0.1.0"
edition = "2021"
repository.workspace = true
publish = false

[dependencies]
binrw = "0.15"
dbpf = { path = "../dbpf" }
humansize = "2.1"
fuzzy-matcher = "0.3"

futures = "0.3"
itertools = "0.14"

eframe = { version = "0.32", features = ["persistence"] }
egui_extras = { version = "0.32", features = ["datepicker", "serde"] }
rfd = "0.15"
egui-snarl = "0.8"
egui_dnd = "0.13.0"

enum-iterator = "2.1"
chrono = "0.4"

walkdir = "2"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-panic = "0.1"

tokio-rayon = "2.1"
num_cpus = "1.16"

thiserror = "2.0"

image = "0.25"

clap = { version = "4.5", features = ["derive", "unicode"] }

similar = { version = "2.7", features = ["bytes"] }

serde = { version = "1.0", features = ["derive"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "time", "macros", "fs", "parking_lot"] }

cargo-packager-updater = "0.2"
egui_inbox = "0.9"
const_format = "0.2.35"
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.38", features = ["rt", "macros"] }
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
