[package]
name = "yact"
version = "0.1.0"
edition = "2021"
build = "build.rs"
repository.workspace = true
publish = false

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md",
    "--tag", "{{version}}",
    "--tag-pattern", "{{crate_name}}/v*",
    "--include-path", "{{crate_name}}/",
    "--include-path", "dbpf/"]

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Yet Another Conflict Tool"
identifier = "nl.chieldouwes.yact"
icons = ["icon.png"]

[dependencies]
dbpf = { path = "../dbpf" }
dbpf_utils = { path = "../dbpf_utils" }

futures = "0.3"

eframe = { version = "0.30", features = ["persistence"] }
serde = "1.0.203"
serde_json = "1.0.140"
egui_extras = "0.30"
rfd = "0.15"

tracing = "0.1"

tokio = { version = "1.38", features = ["full"] }

[build-dependencies]
embed-resource = "3.0"
