# SPDX-FileCopyrightText: 2025 Chiel Douwes
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "yact"
version = "0.1.2"
edition = "2021"
build = "build.rs"
repository.workspace = true
publish = false

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md",
    "--tag", "{{version}}",
    "--tag-pattern", "{{crate_name}}/v*",
    "--include-path", "{{crate_name}}/",
    "--include-path", "dbpf/",
    "--include-path", "dbpf_utils/src/lib.rs"]

[package.metadata.packager]
product-name = "Yet Another Conflict Tool"
identifier = "nl.chieldouwes.yact"
icons = ["icon.png"]

[dependencies]
dbpf = { path = "../dbpf" }
dbpf_utils = { path = "../dbpf_utils" }

futures = "0.3"

eframe = { version = "0.31", features = ["persistence"] }
serde = "1.0.203"
serde_json = "1.0.140"
egui_extras = "0.31"
rfd = "0.15"

tracing = "0.1"

tokio = { version = "1.38", features = ["full"] }

[build-dependencies]
embed-resource = "3.0"
