# SPDX-FileCopyrightText: 2025 Chiel Douwes
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "yact"
version = "0.1.2"
edition = "2021"
build = "build.rs"
repository.workspace = true
publish = false

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md",
    "--tag", "{{version}}",
    "--tag-pattern", "{{crate_name}}/v*",
    "--include-path", "{{crate_name}}/",
    "--include-path", "dbpf/"]

[package.metadata.packager]
product-name = "Yet Another Conflict Tool"
identifier = "nl.chieldouwes.yact"
icons = ["icon.png"]

[dependencies]
dbpf = { path = "../dbpf" }
dbpf_utils = { path = "../dbpf_utils" }

futures.workspace = true

serde.workspace = true
serde_json.workspace = true

eframe.workspace = true
egui_extras.workspace = true
rfd.workspace = true

tracing.workspace = true

tokio = { version = "1.38", features = ["full"] }

[build-dependencies]
embed-resource = "3.0"
