[package]
name = "yape"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
binrw = "0.14"
dbpf = { path = "../dbpf" }
dbpf_utils = { path = "../dbpf_utils" }

futures = "0.3"

eframe = { version = "0.30", features = ["persistence"] }
serde = "1.0.203"
egui_extras = "0.30"
rfd = "0.15.2"
image = "0.25.1"
egui_memory_editor = { version = "0.2.11", features = ["serde"] }
egui_dock = { version = "0.15.0", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
open = "5.3.0"
walkdir = "2"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

tokio = { version = "1.38", features = ["full"] }

thiserror = "2.0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4.22"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[build-dependencies]
embed-resource = "3.0"

