[package]
name = "yape"
version = "0.2.0"
edition = "2021"
build = "build.rs"
repository.workspace = true
publish = false

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md",
    "--tag", "{{version}}",
    "--tag-pattern", "{{crate_name}}/v*",
    "--include-path", "{{crate_name}}/",
    "--include-path", "dbpf/",
    "--include-path", "dbpf_utils/src/editor/"]

[package.metadata.packager]
before-packaging-command = "cargo build --profile dist"
product-name = "Yet Another Package Editor"
identifier = "nl.chieldouwes.yape"
icons = ["icon.png"]

[[package.metadata.packager.file_associations]]
extensions = ["package", "dat"]
mime_type = "application/x-dbpf"
description = "Maxis DBPF package"

[dependencies]
binrw = "0.14"
dbpf = { path = "../dbpf" }
dbpf_utils = { path = "../dbpf_utils" }

futures = "0.3"

eframe = { version = "0.31", features = ["persistence"] }
serde = "1.0.203"
egui_extras = "0.31"
rfd = "0.15"
egui_memory_editor = { version = "0.2.12", features = ["serde"] }
egui_dock = { version = "0.16", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
walkdir = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1.38", features = ["full"] }

thiserror = "2.0"

clap = "4.5.28"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[build-dependencies]
embed-resource = "3.0"

