# SPDX-FileCopyrightText: 2023-2025 Chiel Douwes
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "yape"
version = "0.7.0"
edition = "2021"
build = "build.rs"
repository.workspace = true
publish = false

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md",
    "--tag", "{{version}}",
    "--tag-pattern", "{{crate_name}}/v*",
    "--include-path", "{{crate_name}}/",
    "--include-path", "dbpf/",
    "--include-path", "dbpf_utils/src/lib.rs",
    "--include-path", "dbpf_utils/src/editor/"]

[package.metadata.packager]
product-name = "Yet Another Package Editor"
identifier = "nl.chieldouwes.yape"
icons = ["icon.png"]

[[package.metadata.packager.file_associations]]
extensions = ["package", "dat"]
mime_type = "application/x-dbpf"
description = "Maxis DBPF package"

[dependencies]
binrw.workspace = true
dbpf = { path = "../dbpf" }
dbpf_utils = { path = "../dbpf_utils" }

futures.workspace = true

serde.workspace = true

eframe.workspace = true
egui_extras.workspace = true
rfd.workspace = true
egui_memory_editor.workspace = true
egui_dock.workspace = true
egui_inbox.workspace = true

tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
walkdir = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1.38", features = ["full"] }

thiserror = "2.0"

clap = "4.5.28"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[build-dependencies]
embed-resource = "3.0"

